feat: made cities endpoint
